renaming from whoare to wasd
whoare suffers from an ambiguous pronunciation.

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: whoare
+Source: wasd
 Section: net
 Priority: extra
 Maintainer: Pierre Carrier <pierre@spotify.com>
 Build-Depends: debhelper (>= 5.0.0), default-jdk, maven2, spotify-supervision2-debhelper, spotify-maven-config
 Standards-Version: 3.7.2
 
-Package: whoare
+Package: wasd
 Architecture: all
 Depends: java-runtime, spotify-supervision2
 Description: Exposes association between services and hosts
