--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.spotify</groupId>
-    <artifactId>whoare</artifactId>
+    <artifactId>wasd</artifactId>
     <version>1.2</version>
 
     <properties>
