--- a/wasd-db/pom.xml
+++ b/wasd-db/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.spotify</groupId>
-        <artifactId>wasd</artifactId>
+        <artifactId>wasd-parent</artifactId>
         <version>1.4-SNAPSHOT</version>
     </parent>
     <artifactId>wasd-db</artifactId>
@@ -57,6 +57,11 @@
                 <exclusion>
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
                 </exclusion>
 
                 <exclusion>
