--- a/wasd-http/pom.xml
+++ b/wasd-http/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.spotify</groupId>
-        <artifactId>wasd</artifactId>
+        <artifactId>wasd-parent</artifactId>
         <version>1.4-SNAPSHOT</version>
     </parent>
     <artifactId>wasd-http</artifactId>
