--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.spotify</groupId>
-    <artifactId>wasd</artifactId>
+    <artifactId>wasd-parent</artifactId>
     <version>1.4-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -16,6 +16,7 @@
     <modules>
         <module>wasd-http</module>
         <module>wasd-db</module>
+        <module>wasd-all</module>
     </modules>
 
     <build>
