--- a/wasd-db/pom.xml
+++ b/wasd-db/pom.xml
@@ -20,19 +20,19 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>13.0</version>
+            <version>${deps.guava.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.github.peichhorn</groupId>
             <artifactId>lombok-pg</artifactId>
-            <version>0.11.3</version>
+            <version>${deps.lombok-pg.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
-            <version>1.0.0</version>
+            <version>${deps.config.version}</version>
         </dependency>
 
         <dependency>
