--- a/wasd-all/pom.xml
+++ b/wasd-all/pom.xml
@@ -4,23 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.spotify</groupId>
+        <groupId>com.spotify.wasd</groupId>
         <artifactId>wasd-parent</artifactId>
-        <version>1.4-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <artifactId>wasd-all</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.spotify</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>wasd-db</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.spotify</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>wasd-http</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
@@ -29,6 +29,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
+                <version>2.0</version>
 
                 <executions>
                     <execution>
