--- a/wasd-http/pom.xml
+++ b/wasd-http/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.spotify</groupId>
+        <groupId>com.spotify.wasd</groupId>
         <artifactId>wasd-parent</artifactId>
-        <version>1.4-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <artifactId>wasd-http</artifactId>
     <packaging>jar</packaging>
