--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 DEB_DH_INSTALL_SOURCEDIR=debian/tmp
 DEB_DH_INSTALLINIT_ARGS=-n
 
-MVN = mvn -U -e \
+MVN = mvn3 -U -e \
   -Dmaven.repo.local=$$PWD/.m2-repository \
   -s/etc/maven2/spotify-settings.xml
 
