--- a/wasd-all/pom.xml
+++ b/wasd-all/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.spotify.wasd</groupId>
         <artifactId>wasd-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>wasd-all</artifactId>
 
