--- a/wasd-db/pom.xml
+++ b/wasd-db/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.spotify.wasd</groupId>
         <artifactId>wasd-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
     <artifactId>wasd-db</artifactId>
     <packaging>jar</packaging>
